--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <div style='margin-top:56px;margin-bottom:56px' class='p-0'>
+    <div style='margin-top:56px;padding-bottom:56px' class='p-0'>
       <%= render "shared/flashes"%>
 
       <%= yield %>
