--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,10 +1,10 @@
 <%= simple_form_for [chatroom.gruppetto, chatroom, message],
       html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" },
-      class: "d-flex" } do |f| %>
+      class: "d-flex pb-2" } do |f| %>
     <%= f.input :content,
       label: false,
       placeholder: "Message #{chatroom.gruppetto.user.first_name} about #{chatroom.gruppetto.name}",
       wrapper_html: {class: "flex-grow-1"}
     %>
-    <%= f.submit "Send", class: "btn btn-primary mb-3" %>
+    <%= f.submit "Send", class: "btn btn-primary ms-3 mb-3" %>
   <% end %>
