--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,27 +1,33 @@
 <div id="message-<%= message.id %>" class="py-2">
-  <small>
     <% if current_user == message.user %>
-      <div class="d-flex flex-row-reverse">
-        <div class="card rounded-lg bg-primary shadow-sm border-0 mb-1"style="width: fit-content;">
+      <div class="d-flex flex-row-reverse align-items-end">
+        <% if current_user.avatar.key.nil? %>
+          <%= image_tag "avatar-fallback.svg", height: 25, width: 25, class: 'rounded-circle shadow-sm mb-1' %>
+        <% else %>
+          <%= cl_image_tag current_user.avatar.key, height: 25, width: 25, crop: :fill, class: 'rounded-circle shadow-sm mb-1' %>
+        <% end %>
+        <div class="card rounded-lg bg-success shadow-sm border-0 mb-1 me-2"style="width: fit-content;">
           <p class="p-2 mb-0"><%= message.content %></p>
         </div>
       </div>
         <div class="ps-2 text-end">
-          <small>
             <span><%= message.user.first_name %> </span>
             <i><%= message.created_at.strftime("%e %b at %l:%M %p") %></i>
-          </small>
         </div>
     <% else %>
-      <div class="card rounded-lg bg-warning shadow-sm border-0 mb-1" style="width: fit-content;">
-        <p class="p-2 mb-0"><%= message.content %></p>
+      <div class="d-flex align-items-end">
+        <% if current_user.avatar.key.nil? %>
+          <%= image_tag "avatar-fallback.svg", height: 25, width: 25, class: 'rounded-circle shadow-sm me-2 mb-1' %>
+        <% else %>
+          <%= cl_image_tag @chatroom.gruppetto.user.avatar.key, height: 25, width: 25, crop: :fill, class: 'rounded-circle shadow-sm me-2 mb-1' %>
+        <% end %>
+        <div class="card rounded-lg bg-success shadow-sm border-0 mb-1" style="width: fit-content;">
+          <p class="p-2 mb-0"><%= message.content %></p>
+        </div>
       </div>
-      <div class="ps-2 d-flex">
-        <small>
-          <span><%= message.user.first_name %></span>
+      <div class="d-flex">
+          <span><%= message.user.first_name %> </span>
           <i><%= message.created_at.strftime("%e %b at %l:%M %p") %></i>
-        </small>
       </div>
     <% end %>
-  </small>
 </div>
