--- a/app/views/gruppettos/new.html.erb
+++ b/app/views/gruppettos/new.html.erb
@@ -63,7 +63,7 @@
       <hr>
 
       <div class="d-flex justify-content-end">
-        <%= f.submit 'Create gruppetto', class: "btn btn-primary", data: { gruppetto_validator_target: 'submit' }, disabled: true%>
+        <%= f.submit 'Create gruppetto', class: "btn btn-primary", data: { gruppetto_validator_target: 'submit' }%>
         <%# f.submit 'Save as draft not-implemented', class: "ms-3 btn btn-outline-primary"%>
       </div>
     <% end %>
