--- a/app/views/tracks/_fields.html.erb
+++ b/app/views/tracks/_fields.html.erb
@@ -8,8 +8,7 @@
                         name="gruppetto[track][track_file]"
                         id="track_file"
                         value="yes"
-                        data-action='click->gruppetto-form-hide#trackFile
-                                      click->gruppetto-validator#validateHiddenFields'>
+                        data-action='click->gruppetto-form-hide#trackFile'>
                 <label class="form-check-label" for="inlineRadio1">Yes</label>
               </div>
               <div class="form-check form-check-inline">
@@ -18,8 +17,7 @@
                         name="gruppetto[track][track_file]"
                         id="track_file"
                         value="no"
-                        data-action='click->gruppetto-form-hide#noTrackFile
-                                      click->gruppetto-validator#validateHiddenFields'>
+                        data-action='click->gruppetto-form-hide#noTrackFile'>
                 <label class="form-check-label" for="inlineRadio2">No</label>
               </div>
           <div data-gruppetto-form-hide-target="trackInfo" class="d-none" id="dependentFields">
