--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -3,13 +3,13 @@
     <div class="row">
       <div class="col-lg-4">
         <!--User Profile-->
-        <div class="card mb-4">
+        <div class="card mb-4 rounded">
           <div class="card-body text-center">
           <%= image_tag "avatar-fallback.svg", class: "avatar rounded-circle img-fluid",style: "width: 150px;", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
 
             <h5 class="my-3"><%= current_user.first_name.capitalize %> <%= current_user.last_name.capitalize %></h5>
             <p class="text-muted mb-1"><%= current_user.about %></p>
-            <p class="text-muted mb-4"><%= current_user.level %>, <%= current_user.country %></p>
+            <p class="text-muted mb-4"><%= current_user.level.capitalize %>, <%= current_user.country.capitalize %></p>
             <div class="d-flex justify-content-center mb-2">
               <button type="button" class="btn btn-primary">Follow</button>
               <button type="button" class="btn btn-outline-primary ms-1">Message</button>
@@ -22,10 +22,10 @@
         <div class="card mb-4 mb-lg-0">
           <div class="card-body p-0">
             <ul class="list-group list-group-flush rounded-3">
-                <li class="list-group-item d-flex justify-content-between align-items-center p-3">
+                <li class="d-flex p-3">
                   <%= simple_form_for :friendship, url: friendships_path, method: :get, html: { class: 'form-inline'} do |f| %>
-                    <%= f.text_field :name, class: "row-6", placeholder: "Search Users"%>
-                    <%= f.submit "Search", class: "btn btn-primary row-6 justify-content-center" %>
+                    <%= f.text_field :name, class: "h-100", placeholder: "Search Users"%>
+                    <%= f.submit "Search", class: "btn btn-primary h-100 justify-content-center" %>
                   <% end %>
                 </li>
             </ul>
@@ -125,7 +125,7 @@
           <div class="card-body">
             <div class="row">
               <div class="col-sm-3">
-                <p class="mb-0">Full Name</p>
+                <p class="mb-1">Full Name</p>
               </div>
               <div class="col-sm-9">
                 <p class="text-muted mb-0"><%= current_user.first_name.capitalize %> <%= current_user.last_name.capitalize %></p>
@@ -134,7 +134,7 @@
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <p class="mb-0">Email</p>
+                <p class="mb-1">Email</p>
               </div>
               <div class="col-sm-9">
                 <p class="text-muted mb-0"><%= current_user.email %></p>
@@ -143,7 +143,7 @@
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <p class="mb-0">About: </p>
+                <p class="mb-1">About: </p>
               </div>
               <div class="col-sm-9">
                 <p class="text-muted mb-0"><%= current_user.about %></p>
@@ -152,7 +152,7 @@
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <p class="mb-0">Zip Code</p>
+                <p class="mb-1">Zip Code</p>
               </div>
               <div class="col-sm-9">
                 <p class="text-muted mb-0"><%= current_user.zip_code %></p>
@@ -161,7 +161,7 @@
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <p class="mb-0">Level</p>
+                <p class="mb-1">Level</p>
               </div>
               <div class="col-sm-9">
                 <p class="text-muted mb-0"><%= current_user.level.capitalize %></p>
@@ -170,9 +170,9 @@
             <hr>
             <div class="row">
               <div class="col-sm-3">
-                <p class="mb-0">Country</p>
               </div>
               <div class="col-sm-9">
+                <p class="mb-1">Country</p>
                 <p class="text-muted mb-0"><%= current_user.country %></p>
               </div>
             </div>
