--- a/app/views/gruppettos/new.html.erb
+++ b/app/views/gruppettos/new.html.erb
@@ -1,4 +1,4 @@
-<div class="px-3 bg-light" data-controller="gruppetto-form-hide" style="padding-bottom:56px;">
+<div class="p-3 bg-light" data-controller="gruppetto-form-hide" style="padding-bottom:48px;">
   <div data-controller="gruppetto-validator">
     <h1>New gruppetto</h1>
     <%= simple_form_for(@gruppetto) do |f| %>
