added favicon and changed home-image to smaller version

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -5,7 +5,7 @@ body, html{
 }
 .masthead {
   // background: url('background-jan.jpg') no-repeat center center fixed;
-  background-image:linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(0, 65, 11, 0.73)),url('background-jan.jpg');
+  background-image:linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(0, 65, 11, 0.73)),url('https://res.cloudinary.com/droozakjm/image/upload/c_scale,w_1216/v1670472042/assets/background-jan_mwesss.jpg');
   height:100vh;
   background-position: center;
   background-repeat: no-repeat;
