--- a/app/views/gruppettos/_index_card.html.erb
+++ b/app/views/gruppettos/_index_card.html.erb
@@ -1,49 +1,89 @@
 <tr>
   <td>
   <%= link_to gruppetto_path(gruppetto), class: 'text-decoration-none' do  %>
-    <div class="d-flex bg-light px-3 py-2 rounded shadow">
-        <div>
-          <% unless gruppetto.track.image.url.nil? %>
-            <%= cl_image_tag gruppetto.track.image.key, height: 85, width: 85, crop: :fill, class: 'rounded-top' %>
-          <% else %>
-            <%= image_tag "track-fallback.svg", height: 85, width: 85, class: 'rounded-top' %>
-          <% end %>
-          <div class="bg-secondary rounded-bottom">
-            <p class='mb-0 ml-2 text-center text-light'>
-              <%= gruppetto.participants.count %> rider<%= gruppetto.participants.count > 1 ? 's' : '' %>
-            </p>
-          </div>
-        </div>
-        <div class="m-1 ms-3 flex-grow-1">
+    <div class="my-2 bg-light p-3 rounded shadow">
+    <div class="d-flex justify-content-between">
+        <div class=''>
+          <h5 class="mb-2 me-2 overflow-hidden fw-bold"><%= gruppetto.name %></h5>
           <div class="d-flex">
-            <div>
-              <h5 class="mb-0 overflow-hidden fw-bold"><%= gruppetto.name %></h5>
-              <div class="d-flex">
-                <p class="overflow-hidden text-dark fw-lighter"><%= gruppetto.start.strftime('%d.%m.%Y  - %l%P') unless gruppetto.start.nil? %></p>
-              </div>
-            </div>
-            <div class="d-flex flex-grow-1 align-items-baseline">
-              <%# <p class='mb-0 ml-2 overflow-hidden'><%= gruppetto.participants.count %> <%#rider<%= gruppetto.participants.count > 1 ? '(s)' : ''%></p>
-            </div>
+            <p class="overflow-hidden mb-2 text-dark fw-lighter"><%= gruppetto.start.strftime('%d.%m.%Y  - %l%P') unless gruppetto.start.nil? %></p>
           </div>
+            <p class='mb-0 ml-2'>
+              <%= gruppetto.participations.filter{|attending| attending.participation_status == "Attending" }.count %> rider<%= gruppetto.participants.count > 1 ? 's' : '' %>
+            </p>
+        </div>
+        <div class='me-1'>
+          <% unless gruppetto.track.image.url.nil? %>
+            <%= cl_image_tag gruppetto.track.image.key, height: 100, width: 100, crop: :fill, class: 'rounded' %>
+          <% else %>
+            <%= image_tag "track-fallback.svg", height: 100, width: 100, class: 'rounded' %>
+          <% end %>
+        </div>
+      </div>
+        <div class="m-1 mt-2 flex-grow-1">
+          <table class='w-100'>
+            <tbody>
+              <tr>
+                <td>
+                  <i class="fa-solid fa-gauge" style="margin-left:2px;"></i>
+                </td>
+                <td>
+                  <p class="mb-1 me-1 text-end overflow-hidden text-dark"><%= gruppetto.avg_speed.nil? ? " - " : gruppetto.avg_speed %></p>
+                </td>
+                <td>
+                   <p class="mb-1 text-start text-dark" style='width:30px'>km/h</p>
+                </td>
+                <td>
+                  <i class="fa-solid fa-route"></i>
+                </td>
+                <td>
+                  <p class="mb-1 me-1 text-end overflow-hidden text-dark"><%= gruppetto.track.total_km.nil? ? " - " : gruppetto.track.total_km %></p>
+                </td>
+                <td>
+                  <p class="mb-1 text-start text-dark" style='width:30px'>km</p>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <i class="fa-solid fa-dumbbell"></i>
+                </td>
+                <td>
+                  <p class="mb-1 me-1 text-end overflow-hidden text-dark"><%= gruppetto.difficulty.nil? ? " - " : gruppetto.difficulty %> </p>
+                </td>
+                <td>
+                <p class="mb-1 text-start text-dark" style='width:30px'></p>
+                </td>
+                <td>
+                  <i class="fa-solid fa-mountain"></i>
+                </td>
+                <td>
+                  <p class="mb-1 me-1 text-end overflow-hidden text-dark"><%= gruppetto.track.total_km.nil? ? " - " : gruppetto.track.total_vm %></p>
+                </td>
+                <td>
+                  <p class="mb-1 text-start text-dark" style='width:30px'>vm</p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
             <div class="d-flex justify-content-start">
-              <div class="d-flex align-items-baseline"  style="width: 90px;">
-                <i class="fa-solid fa-gauge" style="margin-left:2px;"></i>
-                <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden text-dark"><%= gruppetto.avg_speed.nil? ? " - " : gruppetto.avg_speed %> km/h</p>
+              <div class="d-flex align-items-baseline"  style="width: 140px;">
+
+
               </div>
-              <div class="d-flex align-items-baseline"  style="width: 90px;margin-left:24px;">
-                <i class="fa-solid fa-route"></i>
-                <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden text-dark"><%= gruppetto.track.total_km.nil? ? " - " : gruppetto.track.total_km %> km</p>
+              <div class="d-flex align-items-baseline"  style="width: 140px;margin-left:24px;">
+
+
               </div>
             </div>
             <div class="d-flex justify-content-start">
-              <div class="d-flex align-items-baseline"  style="width: 90px;">
-                <i class="fa-solid fa-dumbbell"></i>
-                <p class="ms-2 mb-0 flex-grow-1 text-center overflow-hidden text-dark"><%= gruppetto.difficulty.nil? ? " - " : gruppetto.difficulty %> </p>
+              <div class="d-flex align-items-baseline"  style="width: 140px;">
+
+
               </div>
-              <div class="d-flex align-items-baseline" style="width: 90px;margin-left:24px;">
-                <i class="fa-solid fa-mountain"></i>
-                <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden text-dark"><%= gruppetto.track.total_km.nil? ? " - " : gruppetto.track.total_vm %> vm</p>
+              <div class="d-flex align-items-baseline" style="width: 140px;margin-left:24px;">
+
+
               </div>
             </div>
           </div>
