--- a/app/views/tracks/_fields.html.erb
+++ b/app/views/tracks/_fields.html.erb
@@ -1,7 +1,8 @@
 <div class="<%= hidden ? 'd-none' : '' %>" data-gruppetto-form-hide-target="trackForm" id="dependentFields">
       <%= f.simple_fields_for(track) do |tracks_form| %>
           <%= tracks_form.input :name, input_html: { class: 'bg-light', data: {action: 'change->gruppetto-validator#validateField'}  }%>
-          <p>Do you want to upload a gpx-file?</p>
+          <hr>
+          <p>You have the possibility to upload a file containing GPS-coordinates. Do you want to upload a file?</p>
               <div class="form-check form-check-inline mb-3">
                 <input class="form-check-input"
                         type="radio"
